--- a/src/pages/waec.html
+++ b/src/pages/waec.html
@@ -22,7 +22,7 @@
         <nav class="navbar">
           <div class="logo">Sage<span>Cafe</span> </div>
           <ul class="nav-links">
-              <li>  <a href="/src/home.html" >Back</a></li>
+            <li>  <a href="/index.html" >Back</a></li>
               </ul>
           <div class="toggle-container">
             <label class="toggle">
