--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-
+ <!-- Preloader -->
+ <div class="preloader" id="preloader">
+  <div class="spinner"></div>
+</div>
+ <!-- Preloader -->
   <!------ header section------->
   <header>
 
@@ -3953,7 +3957,7 @@
               <p>sageApp.com@gmail.com</p>
             </div>
             <div class="contact_info1">
-              <p>+234-703-075-8313</p>
+              <p>+234-703-076-8313</p>
             </div>
           </div>
 
@@ -4025,8 +4029,8 @@
 
     </div>
     <div class="copyright">
-      <p>Copyright © 2025<a href=""> 360kminds.</a> All rights reserved.&nbsp;&nbsp;&nbsp; Design:<a
-          href="https://templatemo.com" rel="nofollow" target="_blank">Philip Willson</a></p>
+      <p>Copyright © 2025<a href="https://tinyurl.com/360KMIND"> 360kminds.</a> All rights reserved.&nbsp;&nbsp;&nbsp; Design:<a
+          href="https://www.facebook.com/ogugua.abonyi?mibextid=ZbWKwL" rel="nofollow" target="_blank">Philip Willson</a></p>
 
     </div>
   </footer>
