--- a/index.html
+++ b/index.html
@@ -3203,6 +3203,11 @@
                   <h3>Document <br>Converter</h3>
                 </a><br>
               </div>
+              <div class="service_conts1">
+                <a href="/src/pages/text_to_speech.html"><img  id="txt_img" class="scroll"  src="/assets/images/txt_to_speech.png" alt="Document Converter">
+                  <h3>Text to Speech <br>Converter</h3>
+                </a><br>
+              </div>
             </div>
           </div>
         </div>
