--- a/src/pages/jamb.html
+++ b/src/pages/jamb.html
@@ -67,11 +67,11 @@
               <h2>Jamb Admission Status</h2><br>
               <h3>Price: #300</h3><br><br>
               
-              <input type="text" id="Fullname"  placeholder="Fullname" required><br><br><br>
+              <input type="text" id="Fullname" name="Fullname" placeholder="Fullname" required><br><br><br>
 
-              <input type="email" id="email"  placeholder="Email" required><br><br><br>
-              <input type="tel" id="phone number"  placeholder="Phone number" required><br><br><br>
-              <input type="text" id="Registration number"  placeholder="Registration number" required maxlength="10"><br><br><br>
+              <input type="email" id="email"  placeholder="Email" name="Email" required><br><br><br>
+              <input type="tel" id="phone number"  placeholder="Phone number" name="Phone number" required><br><br><br>
+              <input type="text" id="Registration number"  placeholder="Registration number"  name="Registration number"  required maxlength="10"><br><br><br>
               <button id="submit" type="submit" >Submit</button><br>
           </div>
       </form>
@@ -86,10 +86,10 @@
               <h2>Print Admission Letter</h2><br>
               <h3>Price: #1400</h3><br><br>
               
-              <input type="text" id="Fullname"  placeholder="Fullname" required><br><br><br>
-              <input type="email" id="email"  placeholder="Email" required><br><br><br>
-              <input type="tel" id="phone_number"  placeholder="Phone number" required><br><br><br>
-              <input type="text" id="Registration_number"  placeholder="Registration number" required maxlength="10"><br><br><br> 
+              <input type="text" id="Fullname"  placeholder="Fullname" name="Fullname" required><br><br><br>
+              <input type="email" id="email"  placeholder="Email" name="Email" required><br><br><br>
+              <input type="tel" id="phone_number"  placeholder="Phone number" name=" phone number" required><br><br><br>
+              <input type="text" id="Registration_number"  placeholder="Registration number" name="Registration number" required maxlength="10"><br><br><br> 
               <button id="submit" type="submit" >Submit</button><br>
           </div>
       </form>
